deployment-config/ingress/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-balancer-service
spec:
  type: LoadBalancer
  selector:
    app: matching
    type: backend
  ports:
  - protocol: TCP
    port: 60000
    targetPort: 5001
