deployment-config/ingress/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/class: nginx
spec:
  rules:
    - host: peer-prep-group-26.com
      http:
        paths:
          - pathType: Prefix
            path: /question
            backend:
              service:
                name: question-service
                port:
                  number: 5000
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3001
