deployment-config/ingress/test-ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress-2
  namespace: default
  annotations:
    kubernetes.io/class: nginx
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.org/websocket-services: matching-service
    nginx.ingress.kubernetes.io/websocket-services: matching-service
    certmanager.k8s.io/cluster-issuer: core-prod
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/secure-backends: 'true'
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /user/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 3001
          - path: /question/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: question-service
                port:
                  number: 5000
          - path: /ai/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ai-service
                port:
                  number: 4444
          - path: /match/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: matching-service
                port:
                  number: 5001
          - path: /collaboration/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: collaboration-service
                port:
                  number: 5555
